[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Art/Misc/Laser.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Misc/LaserEmitterRight.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Misc/LaserEmitterActive.png" type="Texture" id=3]
[ext_resource path="res://Scenes/StageElements/Laser.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.2438
height = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 350, 24 )

[node name="Laser" type="Node2D"]
script = ExtResource( 4 )

[node name="EmitterA" type="RigidBody2D" parent="."]
collision_layer = 4
collision_mask = 27
mass = 10000.0
gravity_scale = 0.0
sleeping = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EmitterA"]
position = Vector2( 2.08112, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="EmitterA"]
texture = ExtResource( 3 )

[node name="Laser" type="Area2D" parent="EmitterA"]
z_index = 1
collision_layer = 0

[node name="Sprite" type="Sprite" parent="EmitterA/Laser"]
position = Vector2( 357.601, 0.0143127 )
scale = Vector2( 10.5872, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EmitterA/Laser"]
position = Vector2( 349.296, -0.348297 )
shape = SubResource( 2 )

[node name="EmitterB" type="RigidBody2D" parent="."]
position = Vector2( 706.211, -0.154625 )
z_index = 2
collision_layer = 4
collision_mask = 27
mass = 10000.0
gravity_scale = 0.0
sleeping = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EmitterB"]
position = Vector2( 2.08112, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="EmitterB"]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Deactivate" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="body_entered" from="EmitterA/Laser" to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Deactivate" to="." method="_on_Deactivate_timeout"]
